cart and nav styling

--- a/src/Components/Carts/CartItem.module.css
+++ b/src/Components/Carts/CartItem.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     padding: 1rem;
-    width: 90%;
+    width: 95%;
     margin: 1rem auto;
     border-radius: 1rem;
     border: 1px solid purple;
@@ -18,4 +18,10 @@
 .cartItem img{
     width: 8rem;
     height: 8rem;
-  }
+}
+
+@media screen and (max-width: 700px) {
+    .cartItem h3{
+        font-size: 1rem;
+    }
+}
