--- a/src/Components/Nav.module.css
+++ b/src/Components/Nav.module.css
@@ -51,8 +51,8 @@
 }
 
 .cartButton button {
-  width: 15rem;
-  padding: 0.5rem 3rem;
+  width: 10rem;
+  padding: 0.5rem;
   font-size: 1.2rem;
   outline: none;
   border-radius: 0.2rem;
