--- a/src/Components/Carts/Cart.module.css
+++ b/src/Components/Carts/Cart.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 80vh;
+    max-height:60vh;
 }
 
 .cartItem{
