--- a/src/Components/Products/ProductSection.module.css
+++ b/src/Components/Products/ProductSection.module.css
@@ -11,8 +11,7 @@
 .productSection_content{
     padding: 1rem;
     display: flex;
-    /* border: 2px solid red; */
     justify-content: center;
     flex-wrap: wrap;
-    gap: 1rem 2rem;
+    gap: 2rem;
 }
