--- a/src/Components/Products/Product.module.css
+++ b/src/Components/Products/Product.module.css
@@ -1,15 +1,14 @@
 .product {
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-  padding: 1rem;
   border-radius: 1rem;
   min-width: 300px;
   max-width: 300px;
+  background-color: rgb(214, 211, 211);
 }
 
 .product .productImg{
   display: flex;
   justify-content: center;
-  /* border: 2px solid red; */
 }
 
 .productImg img{
@@ -18,7 +17,10 @@
 }
 
 .description{
-  margin: 0.2rem 0;
+  background-color: white;
+  width: 98%;
+  border-radius: 0.8rem;
+  margin: 0.2rem auto;
   padding: 0.1rem 1rem;
 }
 
@@ -37,7 +39,7 @@
 .description input{
   width: 3rem;
   outline: none;
-  border: 2px solid grey;
+  border: 2px solid rgb(240, 238, 238);
   border-radius: 0.2rem;
   margin: 0.2rem 0.5rem;
   padding: 0.1rem 0.3rem;
@@ -51,12 +53,14 @@
 .product button {
   border: none;
   outline: none;
-  background-color: purple;
+  background-color: red;
   color: white;
-  padding: 0.5rem 1rem;
-  border-radius: 0.5rem;
+  padding: 0.4rem 1rem;
+  border-radius: 0.2rem;
   font-size: 1rem;
-  margin: 0.5rem;
+  font-weight: 500;
+  margin: 0.5rem auto;
+  width: 99%;
 }
 
 .product button:hover {
