--- a/src/Components/Carts/CartItem.module.css
+++ b/src/Components/Carts/CartItem.module.css
@@ -6,7 +6,7 @@
     gap: 1rem;
     margin: 1rem auto;
     border-radius: 1rem;
-    border: 1px solid purple;
+    border: 1px solid red;
 }
 
 .cartItemDescription h3{
