cart item style

--- a/src/Components/Carts/CartItem.module.css
+++ b/src/Components/Carts/CartItem.module.css
@@ -2,6 +2,7 @@
     width: 95%;
     display: flex;
     padding: 1rem;
+    justify-content: space-between;
     align-items:center;
     gap: 1rem;
     margin: 1rem auto;
