--- a/src/Components/Home/MainSlider.module.css
+++ b/src/Components/Home/MainSlider.module.css
@@ -15,9 +15,9 @@
 }
 
 @media screen and (max-width: 700px) {
-    .mySwiper1{
+    /* .mySwiper1{
         display: block;
-    }
+    } */
 
     .mySwiper{
         display: none;
