--- a/src/Components/Products/Product.module.css
+++ b/src/Components/Products/Product.module.css
@@ -2,7 +2,7 @@
   /* box-shadow: 0 3px 10px rgb(0 0 0 / 0.2); */
   border-radius: 1rem;
   min-width: 290px;
-  max-width: 300px;
+  max-width: 300o;
   background-color: rgb(236, 233, 233);
   margin: auto;
 }
