--- a/src/Components/Products/ProductSection.module.css
+++ b/src/Components/Products/ProductSection.module.css
@@ -14,11 +14,9 @@
     text-align: center;
 }
 
-.productSection_content{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 2rem;
+.mySwiper{
+    width: 100%;
+    margin: 0.5rem auto;
 }
 
 
