--- a/src/Components/Products/DailyDeals.module.css
+++ b/src/Components/Products/DailyDeals.module.css
@@ -11,7 +11,7 @@
 
 .deals{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     gap: 1rem;
     flex-wrap: wrap;
 }
